# safe-math-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: basic.rs  derive.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/derive/: Cargo.toml
examples/derive/src/: main.rs
safe-math-macros/: Cargo.toml  LICENSE-MIT
safe-math-macros/src/: lib.rs
safe-math-macros/src/derive/: mod.rs
safe_math_macros/: Cargo.toml  README.md
safe_math_macros/src/: lib.rs
safe_math_macros/src/derive/: mod.rs
scripts/: check_versions.sh
src/: error.rs  impls.rs  lib.rs  ops.rs
tests/: compound_assignment_test.rs  mod.rs  property_tests.rs  trybuild.rs  unit_test.rs
tests/asm_eq/: Cargo.toml  build.rs  generator.rs
tests/common/: mod.rs
tests/ui/: bad_derive.rs  bad_derive.stderr  bad_derive_missing_attributes.rs  bad_derive_missing_attributes.stderr  bad_derive_missing_checked_trait_unused.rs  bad_derive_missing_checked_trait_unused.stderr  bad_derive_missing_checked_trait_used.rs  bad_derive_missing_checked_trait_used.stderr  bad_return_type.rs  bad_return_type.stderr
