[workspace]
members = ["safe_math_macros", "tests/generated"]

[package]
name = "safe_math"
version = "0.1.0"
edition = "2021"

[features]
derive = ["safe_math_macros/derive"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = ["derive"]

[dependencies]
num-traits = { version = "0.2"}
safe_math_macros = { path = "./safe_math_macros" }


[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
rand = "0.9.1"
num-traits = { version = "0.2" }
