[workspace]
members = ["safe-math-macros", "tests/generated"]

[package]
name = "safe-math"
version = "2.0.0-beta"
edition = "2021"
description = "Safe arithmetic using a procedural macro. Write normal math expressions with automatic overflow checks. No panics, no boilerplate."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GotenJBZ/safe-math-rs"
homepage = "https://github.com/GotenJBZ/safe-math-rs"
documentation = "https://docs.rs/safe-math"
categories = ["mathematics","development-tools::procedural-macro-helpers","security"]
rust-version = "1.78.0"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-*"
]


[features]
derive = ["safe-math-macros/derive"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = ["derive"]

[dependencies]
num-traits = { version = "0.2"}
safe-math-macros = { version = "2.0.0-beta", path = "./safe-math-macros" }


[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
rand = "0.9.1"
num-traits = { version = "0.2" }
trybuild = "1.0"
safe-math-macros = { path = "./safe-math-macros", features = ["derive"] }
